--- a/Conhecimentos.html
+++ b/Conhecimentos.html
@@ -1,53 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Conhecimentos</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-</head>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<body>
-    <div class="container">
-        <aside>
-            <img class="foto" src="./images/img-perfil.jpg" alt="Foto perfil" width="150px">
-            <nav class="menu-bar">
-                <ul>
-                    <a href="./index.html">Sobre</a>
-                    <a href="./conhecimentos.html">Conhecimentos</a>
-                    <a href="./objetivo.html">Objetivo</a>
-                </ul>
-            </nav>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <aside class="col-xl-2">
+          <img
+            class="foto"
+            src="./images/img-perfil.jpg"
+            alt="Foto perfil"
+            width="150px"
+          />
+          <nav class="menu-bar">
+            <ul>
+              <a href="./index.html">Sobre</a>
+              <a href="./conhecimentos.html">Conhecimentos</a>
+              <a href="./objetivo.html">Objetivo</a>
+            </ul>
+          </nav>
         </aside>
 
-        <main>
-            <ol type="A" id="Knowledge">
-                <li>
-                    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element" target="_blank"><img
-                    src="./images/html-5.png" alt="Html">HTML</a>      
-                </li>              
-                <li>
-                    <a href="https://developer.mozilla.org/pt-BR/docs/Learn/Getting_started_with_the_web/CSS_basics"
-                    target="_blank"><img src="./images/css-3.png" alt="Css">CSS</a>
-                </li>               
-                <li>
-                    <a href="https://pt-br.legacy.reactjs.org/docs/getting-started.html" target="_blank">
-                    <img src="./images/react.png" alt="React">React</a>
-                </li>               
-                <li>
-                    <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank"><img
-                    src="./images/js.png" alt="JavaCript">JavaScript</a>
-                </li>                             
-                <li>
-                    <a href="https://nodejs.org/en" target="_blank"><img src="./images/node-js.png" alt="">NodeJS</a>
-                </li>               
-                <li>
-                    <a href="https://getbootstrap.com/" target="_blank"><img src="./images/bootstrap.png" alt="NodeJS">Bootstrap</a>
-                </li>               
-            </ol>
+        <main class="col-xl-10">
+          <ol type="A" id="Knowledge">
+            <li>
+              <a
+                href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element"
+                target="_blank"
+                ><img src="./images/html-5.png" alt="Html" />HTML</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://developer.mozilla.org/pt-BR/docs/Learn/Getting_started_with_the_web/CSS_basics"
+                target="_blank"
+                ><img src="./images/css-3.png" alt="Css" />CSS</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://pt-br.legacy.reactjs.org/docs/getting-started.html"
+                target="_blank"
+              >
+                <img src="./images/react.png" alt="React" />React</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript"
+                target="_blank"
+                ><img src="./images/js.png" alt="JavaCript" />JavaScript</a
+              >
+            </li>
+            <li>
+              <a href="https://nodejs.org/en" target="_blank"
+                ><img src="./images/node-js.png" alt="" />NodeJS</a
+              >
+            </li>
+            <li>
+              <a href="https://getbootstrap.com/" target="_blank"
+                ><img src="./images/bootstrap.png" alt="NodeJS" />Bootstrap</a
+              >
+            </li>
+          </ol>
         </main>
+      </div>
     </div>
 
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
