--- a/Objetivo.html
+++ b/Objetivo.html
@@ -1,46 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Objetivo</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-</head>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<body>
-    <div class="container">
-        <aside>
-            <img class="foto" src="./images/img-perfil.jpg" alt="Foto perfil" width="150px">
-            <nav class="menu-bar">
-                <ul>
-                    <a href="./index.html">Sobre</a>
-                    <a href="./conhecimentos.html">Conhecimentos</a>
-                    <a href="./Objetivo.html">Objetivo</a>
-                </ul>
-            </nav>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <aside class="col-xl-2">
+          <img
+            class="foto"
+            src="./images/img-perfil.jpg"
+            alt="Foto perfil"
+            width="150px"
+          />
+          <nav class="menu-bar">
+            <ul>
+              <a href="./index.html">Sobre</a>
+              <a href="./conhecimentos.html">Conhecimentos</a>
+              <a href="./Objetivo.html">Objetivo</a>
+            </ul>
+          </nav>
         </aside>
 
-        <main>
-            <ul id="career">
-                <li>PROFISSIONAIS</li>
-                <P>
-                    Focar 100% em apredender a linguagem JavaScript que é uma das mais requisitadas hoje em dia no mercado 
-                    de trabalho, depois continuar estudando <br> outras linguagens e enriquecendo minhas Hard skills. Trabalhar
-                    mais minhas Soft kills no ambito de ser um profissional mais completo. <br>
-                    Tenho como objetivo chegar ao nível Sênior, e futuramente trabalhar para uma grande 
-                    empresa do exterior.
-                </P>
-                
-                <li>PESSOAIS</li>
-                <P>
-                    <b>Quem quer um dia ser grande tem que sonhar grande.</b> <br>
-                    Primeiramente meu objetivo é me formar em Desenvolvimento Web e me inserir no mercado de trabalho
-                    para que eu possa seguir com meus <br> outros objetivos que é a construção da minha casa, fazer 
-                    investimentos, ter uma vida confortável e viajar muito com minha esposa.                   
-                </P>               
-            </ul>
+        <main class="col-xl-10">
+          <ul id="career">
+            <li>PROFISSIONAIS</li>
+            <p>
+              Focar 100% em apredender a linguagem JavaScript que é uma das mais
+              requisitadas hoje em dia no mercado de trabalho, depois continuar
+              estudando <br />
+              outras linguagens e enriquecendo minhas Hard skills. Trabalhar
+              mais minhas Soft kills no ambito de ser um profissional mais
+              completo. <br />
+              Tenho como objetivo chegar ao nível Sênior, e futuramente
+              trabalhar para uma grande empresa do exterior.
+            </p>
+
+            <li>PESSOAIS</li>
+            <p>
+              <b>Quem quer um dia ser grande tem que sonhar grande.</b> <br />
+              Primeiramente meu objetivo é me formar em Desenvolvimento Web e me
+              inserir no mercado de trabalho para que eu possa seguir com meus
+              <br />
+              outros objetivos que é a construção da minha casa, fazer
+              investimentos, ter uma vida confortável e viajar muito com minha
+              esposa.
+            </p>
+          </ul>
         </main>
+      </div>
     </div>
-</body>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
