--- a/index.html
+++ b/index.html
@@ -1,45 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-</head>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<body>
-    <div class="container">
-        <aside>
-            <img class="foto" src="./images/img-perfil.jpg" alt="Foto perfil" width="150px">
-            <nav class="menu-bar">
-                <ul>
-                    <a href="./index.html">SOBRE</a>
-                    <a href="./conhecimentos.html">CONHECIMENTOS</a>
-                    <a href="./objetivo.html">OBJETIVO</a>
-                </ul>
-            </nav>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <aside class="col-xl-2">
+          <img
+            class="foto"
+            src="./images/img-perfil.jpg"
+            alt="Foto perfil"
+            width="150px"
+          />
+          <nav class="menu-bar">
+            <ul>
+              <a href="./index.html">Sobre</a>
+              <a href="./conhecimentos.html">Conhecimentos</a>
+              <a href="./objetivo.html">Objetivo</a>
+            </ul>
+          </nav>
         </aside>
 
-        <main> 
-            <div id="about">
-                <div id="information">
-                    <h1>ADRIANO DOS S S FONTES</h1>
-                    <h3>RUA MANOEL DAS NEVES BARRETO,125. ITABAIANA - SE</h3>
-                    <a href="mailto:adrianossfontes@gmail.com" target="_blank">ADRIANOSSFONTES@GMAIL.COM</a>
-                    <h4>79 99866-8216</h4>                  
-                </div>
-                <P>📌Sou uma pessoa comunicativa, alegre e espontânea que gosta muito de tecnologia.</P>
-                
-                <div id="social-network">
-                    <a href="https://github.com/Adrianosts" target="_blank"><img src="./images/github.png" alt="GitHub"></a>
-                    <a href="https://www.linkedin.com/in/adriano-santos-51473a256/" target="_blank"><img
-                    src="./images/linkedin.png" alt="Linkedin"></a>
-                    <a href="https://www.instagram.com/euadrianoss/" target="_blank"><img src="./images/instagram.png"
-                    alt="Instagram"></a>                  
-                </div>  
-            </div>                             
+        <main class="col-xl-10">
+          <div id="about">
+            <div id="information">
+              <h1>ADRIANO DOS S S FONTES</h1>
+              <h3>Rua Beco Diagonal, 9/34 - Hogwarts/NA</h3>
+              <a href="mailto:adrianossfontes@gmail.com" target="_blank"
+                >ADRIANOSSFONTES@GMAIL.COM</a
+              >
+              <h4>79 98765-4321</h4>
+            </div>
+            <p>
+              📌Sou uma pessoa comunicativa, alegre e espontânea que gosta muito
+              de tecnologia.
+            </p>
+
+            <div id="social-network">
+              <a href="https://github.com/Adrianosts" target="_blank"
+                ><img src="./images/github.png" alt="GitHub"
+              /></a>
+              <a
+                href="https://www.linkedin.com/in/adriano-santos-51473a256/"
+                target="_blank"
+                ><img src="./images/linkedin.png" alt="Linkedin"
+              /></a>
+              <a href="https://www.instagram.com/euadrianoss/" target="_blank"
+                ><img src="./images/instagram.png" alt="Instagram"
+              /></a>
+            </div>
+          </div>
         </main>
+      </div>
     </div>
-</body>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
